# Rust-exercicios

./: .gitignore  Cargo.toml  README.md
Rust Basic/exercises/dungeoncrawl/: Cargo.toml
Rust Basic/exercises/dungeoncrawl/src/: map.rs  player.rs
Rust Basic/exercises/dungeoncrawl/src/map_builder/: drunkard.rs  mod.rs  rooms.rs
Rust Basic/exercises/dungeoncrawl/src/systems/: fov.rs  hud.rs  map_render.rs  random_move.rs  tooltips.rs
modules/01-fundamentals/: README.md
modules/01-fundamentals/simple-calculator/: README.md
modules/02-networking/: README.md
modules/02-networking/chat-server-client/: README.md
modules/03-games/: README.md
modules/03-games/dungeon-crawl/src/: components.rs  main.rs  spawner.rs
modules/03-games/dungeon-crawl/src/map_builder/: automata.rs  empty.rs  mod.rs  prefab.rs
modules/03-games/dungeon-crawl/src/systems/: chasing.rs  collisions.rs  combat.rs  end_turn.rs
modules/03-games/flappy/src/: main.rs
modules/03-games/snake-game/: Cargo.toml
modules/03-games/snake-game/src/: snake.rs
